# prygmatic

./: CONTRIBUTING.md  README.md  humans.txt  pyproject.toml
api/: index.py
